--- a/Almacen/.env
+++ b/Almacen/.env
@@ -24,7 +24,8 @@ APP_SECRET=4ff3fc9e11899d6b9a00dff02fd6dcd5
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/Almacen?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://root:12345678@127.0.0.1:3308/Almacen?serverVersion=8.0"
+#DATABASE_URL="mysql://gustavo:12345678@127.0.0.1:3307/web911?serverVersion=8.0"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
